Updates from ShareLaTeX

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -2304,3 +2304,11 @@ Challenge},
   year={2016},
   organization={IEEE}
 }
+@inproceedings{cui2014refresh,
+  title={Refresh: A self-adaptation framework to support fault tolerance in field mobile robots},
+  author={Cui, Yanzhe and Voyles, Richard M and Lane, Joshua T and Mahoor, Mohammad H},
+  booktitle={Intelligent Robots and Systems (IROS 2014), 2014 IEEE/RSJ International Conference on},
+  pages={1576--1582},
+  year={2014},
+  organization={IEEE}
+}
