Updates from ShareLaTeX

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -2312,3 +2312,55 @@ Challenge},
   year={2014},
   organization={IEEE}
 }
+@article{parker1998alliance,
+  title={ALLIANCE: An architecture for fault tolerant multirobot cooperation},
+  author={Parker, Lynne E},
+  journal={IEEE transactions on robotics and automation},
+  volume={14},
+  number={2},
+  pages={220--240},
+  year={1998},
+  publisher={IEEE}
+}
+@inproceedings{morais2015distributed,
+  title={Distributed fault diagnosis for multiple mobile robots using an agent programming language},
+  author={Morais, M{\'a}rcio G and Meneguzzi, Felipe R and Bordini, Rafael H and Amory, Alexandre M},
+  booktitle={Advanced Robotics (ICAR), 2015 International Conference on},
+  pages={395--400},
+  year={2015},
+  organization={IEEE}
+}
+@inproceedings{khan2015framework,
+  title={A framework for a fault tolerant multi-robot system},
+  author={Khan, M Tahir and Qadir, MU and Nasir, F and de Silva, CW},
+  booktitle={Computer Science \& Education (ICCSE), 2015 10th International Conference on},
+  pages={197--201},
+  year={2015},
+  organization={IEEE}
+}
+@article{castello2016adaptive,
+  title={Adaptive foraging for simulated and real robotic swarms: the dynamical response threshold approach},
+  author={Castello, Eduardo and Yamamoto, Tomoyuki and Dalla Libera, Fabio and Liu, Wenguo and Winfield, Alan FT and Nakamura, Yutaka and Ishiguro, Hiroshi},
+  journal={Swarm Intelligence},
+  volume={10},
+  number={1},
+  pages={1--31},
+  year={2016},
+  publisher={Springer}
+}
+@inproceedings{desai2017drona,
+  title={DRONA: a framework for safe distributed mobile robotics},
+  author={Desai, Ankush and Saha, Indranil and Yang, Jianqiao and Qadeer, Shaz and Seshia, Sanjit A},
+  booktitle={Proceedings of the 8th International Conference on Cyber-Physical Systems},
+  pages={239--248},
+  year={2017},
+  organization={ACM}
+}
+@incollection{decastro2018collision,
+  title={Collision-free reactive mission and motion planning for multi-robot systems},
+  author={DeCastro, Jonathan A and Alonso-Mora, Javier and Raman, Vasumathi and Rus, Daniela and Kress-Gazit, Hadas},
+  booktitle={Robotics Research},
+  pages={459--476},
+  year={2018},
+  publisher={Springer}
+}
