Updates from ShareLaTeX

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -2364,3 +2364,27 @@ Challenge},
   year={2018},
   publisher={Springer}
 }
+@inproceedings{desai2016dynamically,
+  title={Dynamically feasible and safe shape transitions for teams of aerial robots},
+  author={Desai, Arjav and Cappo, Ellen A and Michael, Nathan},
+  booktitle={Intelligent Robots and Systems (IROS), 2016 IEEE/RSJ International Conference on},
+  pages={5489--5494},
+  year={2016},
+  organization={IEEE}
+}
+@inproceedings{alrahman2016power,
+  title={On the power of attribute-based communication},
+  author={Alrahman, Yehia Abd and De Nicola, Rocco and Loreti, Michele},
+  booktitle={International Conference on Formal Techniques for Distributed Objects, Components, and Systems},
+  pages={1--18},
+  year={2016},
+  organization={Springer}
+}
+@inproceedings{marzinotto2014towards,
+  title={Towards a unified behavior trees framework for robot control},
+  author={Marzinotto, Alejandro and Colledanchise, Michele and Smith, Christian and {\"O}gren, Petter},
+  booktitle={Robotics and Automation (ICRA), 2014 IEEE International Conference on},
+  pages={5420--5427},
+  year={2014},
+  organization={IEEE}
+}
